SUBDIRS =  

noinst_LIBRARIES = libComplexDMRG.a

libComplexDMRG_a_SOURCES = complex_tensor_lattice.cc \
		       		       complex_tensor_space.cc \
					       complex_tensor_operator.cc \
					       complex_tensor_hamiltonian.cc \
					       complex_tensor_contraction.cc \
					       complex_tensor_network.cc \
					       complex_tensor_lanczos.cc \
					       complex_tensor_rundmrg.cc 

