SUBDIRS =  

noinst_LIBRARIES = libRealDMRG.a

libRealDMRG_a_SOURCES = real_tensor_lattice.cc \
					    real_tensor_space.cc \
					    real_tensor_operator.cc \
					    real_tensor_hamiltonian.cc \
					    real_tensor_contraction.cc \
					    real_tensor_network.cc \
					    real_tensor_lanczos.cc \
					    real_tensor_rundmrg.cc 
